# PluginGodotShaders

./: .gitignore  .gitmodules  CMakeLists.txt  GodotShaders.cpp  GodotShaders.h  README.md  dllmain.cpp  main.cpp  shader.gds
GodotShaderTranscompiler/: ShaderTranscompiler.cpp  ShaderTranscompiler.h
GodotShaderTranscompiler/Godot/: README.txt  misc.cpp  shader_compiler_gles3.cpp  shader_compiler_gles3.h  shader_language.cpp  shader_types.cpp  shader_types.h
Plugin/: CanvasMaterial.cpp  CanvasMaterial.h  PipelineItem.h  ResourceManager.cpp  ResourceManager.h  Settings.h  Sprite2D.cpp  Sprite2D.h
PluginAPI/: Plugin.h
UI/: UIHelper.cpp  UIHelper.h
examples/GodotSimple/: GodotSimple.sprj
examples/GodotSimple/shaders/: CanvasMaterial.shader
inc/Core/: BackBufferCopy.h  CanvasMaterial.h  CanvasVertex.h  PipelineItem.h  Settings.h  ShaderCompiler.h  Sprite.h  Uniform.h
inc/Plugin/: CanvasMaterial.h  PipelineItem.h  Settings.h  Sprite.h  Sprite2D.h
inc/PluginAPI/: Plugin.h  PluginData.h
inc/UI/: UIHelper.h
libs/GodotShaderTranscompiler/: LICENSE  README.md  ShaderTranscompiler.cpp  ShaderTranscompiler.h
libs/GodotShaderTranscompiler/Godot/: misc.h  shader_compiler_gles3.cpp  shader_compiler_gles3.h  shader_language.cpp  shader_language.h  visual_server.h
libs/pugixml/scripts/nuget/: pugixml.nuspec
src/: CanvasMaterial.cpp  ResourceManager.cpp  ShaderCompiler.cpp  Sprite.cpp  Sprite2D.cpp  UIHelper.cpp
